#95 refactored storing items in ship